k8s/deployments/model-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
  labels:
    name: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: swithana/ckn-edge-model:v0.2
        ports:
          - containerPort: 11000
      restartPolicy: Always
