k8s/deployments/model-service.yml
apiVersion: v1
kind: Service
metadata:
  name: model
  labels:
    service: model
spec:
  selector:
    app: model
  type: NodePort
  ports:
  - port: 11000
    targetPort: 11000
    nodePort: 31000
