k8s/deployments/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
  - host: tern.luddy.indiana.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: model
            port:
              number: 31000
